[gd_scene load_steps=4 format=2]

[ext_resource path="res://UIMain/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/font_header.tres" type="DynamicFont" id=2]
[ext_resource path="res://UIMain/ArchitectureDetail/ArchitectureDetail.gd" type="Script" id=3]

[node name="ArchitectureDetail" type="Panel"]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "郴縣 桂陽"

[node name="Data" type="GridContainer" parent="."]
anchor_right = 0.8
margin_left = 16.0
margin_top = 60.0
margin_right = -16.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Data"]
margin_right = 115.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "FACTION"
align = 1

[node name="Label2" type="Label" parent="Data"]
margin_left = 123.0
margin_right = 300.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "SECTION"
align = 1

[node name="Label3" type="Label" parent="Data"]
margin_left = 308.0
margin_right = 436.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "IDLING_PERSONS"
align = 1

[node name="Label4" type="Label" parent="Data"]
margin_left = 444.0
margin_right = 614.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "WORKABLE_PERSONS"
align = 1

[node name="Label5" type="Label" parent="Data"]
margin_left = 622.0
margin_right = 766.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "FACTION_PERSONS"
align = 1

[node name="Label6" type="Label" parent="Data"]
margin_left = 774.0
margin_right = 892.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "WILD_PERSONS"
align = 1

[node name="Faction" type="HBoxContainer" parent="Data"]
margin_left = 31.0
margin_top = 26.0
margin_right = 83.0
margin_bottom = 44.0
size_flags_horizontal = 4

[node name="Color" type="ColorRect" parent="Data/Faction"]
margin_right = 16.0
margin_bottom = 18.0
rect_min_size = Vector2( 16, 16 )

[node name="Text" type="Label" parent="Data/Faction"]
margin_left = 20.0
margin_right = 52.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="Section" type="Label" parent="Data"]
margin_left = 123.0
margin_top = 26.0
margin_right = 300.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="IdlingPersons" type="Label" parent="Data"]
margin_left = 308.0
margin_top = 26.0
margin_right = 436.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="WorkablePersons" type="Label" parent="Data"]
margin_left = 444.0
margin_top = 26.0
margin_right = 614.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "耒火"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FactionPersons" type="Label" parent="Data"]
margin_left = 622.0
margin_top = 26.0
margin_right = 766.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="WildPersons" type="Label" parent="Data"]
margin_left = 774.0
margin_top = 26.0
margin_right = 892.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="Label15" type="Label" parent="Data"]
margin_top = 52.0
margin_right = 115.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "POPULATION"
align = 1

[node name="Label16" type="Label" parent="Data"]
margin_left = 123.0
margin_top = 52.0
margin_right = 300.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "MILITARY_POPULATION"
align = 1

[node name="Label13" type="Label" parent="Data"]
margin_left = 308.0
margin_top = 52.0
margin_right = 436.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "FUND"
align = 1

[node name="Label14" type="Label" parent="Data"]
margin_left = 444.0
margin_top = 52.0
margin_right = 614.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "FOOD"
align = 1

[node name="Label25" type="Label" parent="Data"]
margin_left = 622.0
margin_top = 52.0
margin_right = 766.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1

[node name="Label26" type="Label" parent="Data"]
margin_left = 774.0
margin_top = 52.0
margin_right = 892.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1

[node name="Population" type="Label" parent="Data"]
margin_top = 78.0
margin_right = 115.0
margin_bottom = 96.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="MilitaryPopulation" type="Label" parent="Data"]
margin_left = 123.0
margin_top = 78.0
margin_right = 300.0
margin_bottom = 96.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="Fund" type="Label" parent="Data"]
margin_left = 308.0
margin_top = 78.0
margin_right = 436.0
margin_bottom = 96.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="Food" type="Label" parent="Data"]
margin_left = 444.0
margin_top = 78.0
margin_right = 614.0
margin_bottom = 96.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="Label27" type="Label" parent="Data"]
margin_left = 622.0
margin_top = 78.0
margin_right = 766.0
margin_bottom = 96.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1

[node name="Label28" type="Label" parent="Data"]
margin_left = 774.0
margin_top = 78.0
margin_right = 892.0
margin_bottom = 96.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1

[node name="Label9" type="Label" parent="Data"]
margin_top = 104.0
margin_right = 115.0
margin_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "AGRICULTURE"
align = 1

[node name="Label10" type="Label" parent="Data"]
margin_left = 123.0
margin_top = 104.0
margin_right = 300.0
margin_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "COMMERCE"
align = 1

[node name="Label11" type="Label" parent="Data"]
margin_left = 308.0
margin_top = 104.0
margin_right = 436.0
margin_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "MORALE"
align = 1

[node name="Label12" type="Label" parent="Data"]
margin_left = 444.0
margin_top = 104.0
margin_right = 614.0
margin_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "ENDURANCE"
align = 1

[node name="Label29" type="Label" parent="Data"]
margin_left = 622.0
margin_top = 104.0
margin_right = 766.0
margin_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1

[node name="Label30" type="Label" parent="Data"]
margin_left = 774.0
margin_top = 104.0
margin_right = 892.0
margin_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1

[node name="Agriculture" type="Label" parent="Data"]
margin_top = 130.0
margin_right = 115.0
margin_bottom = 148.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="Commerce" type="Label" parent="Data"]
margin_left = 123.0
margin_top = 130.0
margin_right = 300.0
margin_bottom = 148.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="Morale" type="Label" parent="Data"]
margin_left = 308.0
margin_top = 130.0
margin_right = 436.0
margin_bottom = 148.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="Endurance" type="Label" parent="Data"]
margin_left = 444.0
margin_top = 130.0
margin_right = 614.0
margin_bottom = 148.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="Label31" type="Label" parent="Data"]
margin_left = 622.0
margin_top = 130.0
margin_right = 766.0
margin_bottom = 148.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1

[node name="Label32" type="Label" parent="Data"]
margin_left = 774.0
margin_top = 130.0
margin_right = 892.0
margin_bottom = 148.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1

[node name="Label17" type="Label" parent="Data"]
margin_top = 156.0
margin_right = 115.0
margin_bottom = 174.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "TROOP"
align = 1

[node name="Label18" type="Label" parent="Data"]
margin_left = 123.0
margin_top = 156.0
margin_right = 300.0
margin_bottom = 174.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "TROOP_MORALE"
align = 1

[node name="Label19" type="Label" parent="Data"]
margin_left = 308.0
margin_top = 156.0
margin_right = 436.0
margin_bottom = 174.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "COMBATIVITY"
align = 1

[node name="Label21" type="Label" parent="Data"]
margin_left = 444.0
margin_top = 156.0
margin_right = 614.0
margin_bottom = 174.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "FRONTLINE"
align = 1

[node name="Label20" type="Label" parent="Data"]
margin_left = 622.0
margin_top = 156.0
margin_right = 766.0
margin_bottom = 174.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1

[node name="Label22" type="Label" parent="Data"]
margin_left = 774.0
margin_top = 156.0
margin_right = 892.0
margin_bottom = 174.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1

[node name="Troop" type="Label" parent="Data"]
margin_top = 182.0
margin_right = 115.0
margin_bottom = 200.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="TroopMorale" type="Label" parent="Data"]
margin_left = 123.0
margin_top = 182.0
margin_right = 300.0
margin_bottom = 200.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="TroopCombativity" type="Label" parent="Data"]
margin_left = 308.0
margin_top = 182.0
margin_right = 436.0
margin_bottom = 200.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="Frontline" type="Label" parent="Data"]
margin_left = 444.0
margin_top = 182.0
margin_right = 614.0
margin_bottom = 200.0
size_flags_horizontal = 3
text = "耒火"
align = 1

[node name="EquipmentCounts" type="GridContainer" parent="."]
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 60.0
margin_right = -16.0
margin_bottom = -17.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 270.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "SPECIALTIES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Specialties" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 296.0
__meta__ = {
"_edit_use_anchors_": false
}
